--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "postinstall": "echo postinstall finished!!",
+        "heroku-prebuild": "npm run production",
+        "heroku-postbuild": "echo heroku-postbuild finished!!"
     },
     "devDependencies": {
         
