--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "dependencies": {
         "react-router-dom": "^5.2.0"
     },
+    
     "engines": {
-        "node": "10.3.0"
+        "node": "14.15.5",
+        "npm": "6.14.11"
     }
-
 }
