--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "postinstall": "echo postinstall finished!!",
-        "heroku-prebuild": "npm run production",
-        "heroku-postbuild": "echo heroku-postbuild finished!!"
+        "heroku-prebuild": "npm run production"
     },
     "devDependencies": {
         
