--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "prod": "yarn run production",
+        "production": "mix --production",
+        "postinstall": "yarn run prod"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
